[package]
name = "diff_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
glob = "0.3.1"
itertools = "0.12.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
similar = "2.3.0"
toml = "0.8.8"
